<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/logo"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>

        <Space
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contacts" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blockone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewOne"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/deren"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/textViewOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="Дерен белый \nЭто вырастающий до трех метров листопадный кустарник. Его устремленные вверх прямые ветки имеют красноватую окраску различных оттенков." />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blockone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageViewOne2"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/barvinok"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/textViewOne2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="TextView" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blocktwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="Жимолость обыкновенная \nЭто листопадный кустарник высотой до 2,5 м. Молодые побеги зелёного или красноватого цвета, на старых кора серая или буровато-серая." />

        <ImageView
            android:id="@+id/imageViewTwo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/zhimolost"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_margin="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blockthree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewThree"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/zhimolost2"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_margin="15dp"/>

        <TextView
            android:id="@+id/textViewThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:text="Жимолость татарская \nЭто листопадный кустарник высотой 1—3 м. Побеги полые. Кора молодых побегов желтовато-бурая, покрытая мелкими тёмными чечевичками;" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blockfour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Крушина ломкая \nКустарник или небольшое дерево, может достигать в высоту 7 м. Ствол и ветви тёмно-бурые. В отличие от крушины слабительной, ствол гладкий, без колючек."
            android:layout_margin="15dp"/>

        <ImageView
            android:id="@+id/imageViewFour"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/krushina"
            android:scaleType="fitStart"
            android:adjustViewBounds="true"
            android:layout_margin="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sarrow"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sarrow" />

        <Button
            android:id="@+id/sarrow2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sarrow2" />

        <Button
            android:id="@+id/b1"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />

        <Button
            android:id="@+id/b2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="2" />

        <Button
            android:id="@+id/b3"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3" />

        <Button
            android:id="@+id/b4"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4" />

        <Button
            android:id="@+id/farrow2"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/farrow2" />

        <Button
            android:id="@+id/farrow"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/farrow" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/footer"
        android:textAlignment="center" />
</LinearLayout>